# ALGORITHMS

./: .gitignore  CMakeLists.txt
CW/C/: main.cpp
CW/D/: main.cpp
CW/E/: main.cpp
CW/F/: main.cpp
CW/first/: README.md
CW/first/A/: main.cpp
CW/first/B/: main.cpp
contests/fifth/A/: README.md  main.cpp
contests/fifth/B/: README.md  main.cpp
contests/fifth/C/: README.md  main.cpp
contests/fifth/D/: README.md  main.cpp
contests/fifth/E/: README.md  main.cpp
contests/fifth/F/: main.cpp
contests/fifth/G/: main.cpp
contests/fifth/H/: main.cpp  main2.cpp
contests/fifth/I/: main.cpp
contests/first/: README.md  main.cpp
contests/first/eight/: README.md  main.cpp
contests/first/eleven/: README.md  main.cpp
contests/first/five/: README.md  main.cpp
contests/first/four/: README.md  main.cpp
contests/first/nine/: README.md  main.cpp
contests/first/seven/: README.md  main.cpp
contests/first/six/: README.md  main.cpp
contests/first/ten/: README.md  main.cpp
contests/first/three/: README.md  main.cpp
contests/first/twelve/: main.cpp
contests/first/two/: README.md  main.cpp
contests/fourth/A/: main.cpp
contests/fourth/B/: main.cpp
contests/fourth/C/: main.cpp
contests/fourth/D/: main.cpp
contests/fourth/E/: main.cpp
contests/fourth/F/: main.cpp
contests/fourth/G/: main.cpp
contests/second/A/: main.cpp
contests/second/B/: main.cpp
contests/second/C/: main.cpp
contests/second/D/: main.cpp
contests/second/E/: main.cpp
contests/second/F/: main.cpp
contests/second/G/: main.cpp
contests/second/H/: main.cpp
lectures/: CMakeLists.txt  main.cpp
lectures/01_lecture/: README.md
seminars/: CMakeLists.txt
seminars/codeforces/: CMakeLists.txt
useful/: CMakeLists.txt  README.md
(+49 files in other folders)
